adding more notes to split form

--- a/docs/dg_penalty/revision/dgpenalty.bib
+++ b/docs/dg_penalty/revision/dgpenalty.bib
@@ -1,3 +1,24 @@
+@article{burman2010interior,
+  title={Interior penalty continuous and discontinuous finite element approximations of hyperbolic equations},
+  author={Burman, Erik and Quarteroni, Alfio and Stamm, Benjamin},
+  journal={Journal of Scientific Computing},
+  volume={43},
+  number={3},
+  pages={293--312},
+  year={2010},
+  publisher={Springer}
+}
+
+@article{boffi2000problem,
+  title={On the problem of spurious eigenvalues in the approximation of linear elliptic problems in mixed form},
+  author={Boffi, Daniele and Brezzi, Franco and Gastaldi, Lucia},
+  journal={Mathematics of Computation of the American Mathematical Society},
+  volume={69},
+  number={229},
+  pages={121--140},
+  year={2000}
+}
+
 @book{riviere2008discontinuous,
   title={{Discontinuous Galerkin methods for solving elliptic and parabolic equations: theory and implementation}},
   author={Riviere, Beatrice},
