--- a/docs/splitform/main.tex
+++ b/docs/splitform/main.tex
@@ -8,7 +8,9 @@
 \usepackage{fullpage}
 \usepackage{amsmath,amssymb,amsfonts,amsthm}
 \theoremstyle{definition}
-\newtheorem{definition}{Definition}[section]
+\newtheorem{definition}{Definition}
+\theoremstyle{lemma}
+\newtheorem{lemma}{Lemma}
 \newtheorem*{remark}{Remark}
 %\usepackage{thmtools}
 %\declaretheorem[style=definition,qed=$\blacksquare$,numberwithin=chapter]{definition}
@@ -315,7 +317,7 @@ legend style={font=\small}
 
 \date{}
 \author{Jesse Chan}
-\title{Energy stable discontinuous Galerkin formulations and discrete differential operators}
+\title{Energy stable discontinuous Galerkin formulations using discrete differential operators}
 
 \begin{document}
 
@@ -337,50 +339,86 @@ We assume that the domain $\Omega$ is decomposed into non-overlapping elements $
 \[
 \jump{u} = u^+ - u^-, \qquad \avg{u} = \frac{u^+ + u^-}{2}.
 \]
+On faces which coincide with the boundary $\partial \Omega$, the average and jump are defined as
+\[
+\jump{u} = 0, \qquad \avg{u} = u.
+\]
 The jump and average of vector fields are defined component-wise using the jumps and averages of components.  
+
+We will assume for now that all elements are affine mappings of a reference element $\widehat{D}$.  
 
 \subsection{Discrete inner products}
 
 In order to define discrete differential operators, we first introduce the $L^2$ inner product on $V_h\LRp{\Oh}$
 \[
-\LRp{u,v}_{\Omega} = \sum_{D^k} \int_{D^k} uv \diff{x} = \sum_{D^k} \int_{\widehat{D}} uv J \diff{\widehat{x}}.  
+\LRp{u,v}_{\Omega} = \sum_{D^k} \int_{D^k} uv \diff{x} = \sum_{D^k} \int_{\widehat{D}} uv J \diff{\widehat{x}},
 \]
-In practice, these integrals are computed using quadrature, such that 
+and the associated $L^2$ projection $\Pi_N: L^2\LRp{\Omega}\rightarrow P^N$
 \[
-\int_{\widehat{D}}uv = \sum_{i=1}^{N_q} u(\bm{x}_i)v(\bm{x}_i) w_i,
+\LRp{\Pi_N u,v}_{\Omega} = \LRp{u,v}_{\Omega}.  
 \]
+
+In practice, these integrals are computed using quadrature, such that 
+\begin{equation}
+\int_{\widehat{D}}uv = \sum_{i=1}^{N_q} u(\bm{x}_i)v(\bm{x}_i) w_i,
+\label{eq:quad}
+\end{equation}
 where $N_q$ is the number of quadrature points.  The only assumptions we make upon this quadrature is that it is sufficiently accurate such that 
 \begin{enumerate}
-\item The quadrature induces an equivalent inner product over the reference element $\widehat{D}$
-\item Integration by parts holds (with respect to the reference coordinates $\widehat{x}$).
+\item The quadrature induces an $L^2$-equivalent inner product over the reference element $\widehat{D}$.
+\item The quadrature is sufficiently accurate such that integration by parts holds with respect to the reference coordinates $\widehat{x}$.
 \end{enumerate}
 
-We also introduce the $L^2$ projection $\Pi_N: L^2\LRp{\Omega}\rightarrow P^N$ such that 
-\[
-\LRp{\Pi_N u,v}_{\Omega} = \LRp{u,v}_{\Omega}.
-\]
 
 \subsection{Discrete derivatives}
-We introduce two discrete DG derivatives in this section.  The first is the implicit definition used in \cite{di2011mathematical}
-
+We introduce two discrete DG derivatives in this section.  The first is the implicit definition used in \cite{di2011mathematical}:
 \begin{definition}
 The discontinuous Galerkin differentiation operator ${D}^i: L^2\LRp{\Omega}\rightarrow V_h$ is defined implicitly as follows:
 \[
-\LRp{{D}^i u,v}_{\Oh} = \sum_{D^k} \LRp{\LRp{-u,\pd{v}{\bm{x}_i}}_{\LK} + \LRa{\avg{u},v\bm{n}_i}_{\LdK}}.
+\LRp{{D}^i u,v}_{\Oh} = \sum_{D^k} \LRp{\LRp{-u,\pd{v}{\bm{x}_i}}_{\LK} + \LRa{\avg{u},v\bm{n}_i}_{\LdK}}, \qquad \forall v \in V_h.
 \]
 \end{definition}
 
-We note that, for $u,v \in V_h$, integration by parts yields an equivalent definition of $D^i$ found in \cite{hesthaven2004high,Warburton20063205}
+We note that, for $u,v \in V_h$, (discrete) integration by parts yields an equivalent definition of $D^i$ found in \cite{hesthaven2004high,Warburton20063205}
 \[
-\LRp{{D}^i u,v}_{\Oh} = \sum_{D^k} \LRp{\LRp{\pd{u}{\bm{x}_i},v}_{\LK} + \frac{1}{2}\LRa{\jump{u},v\bm{n}_i}_{\LdK}}.
+\LRp{{D}^i u,v}_{\Oh} = \sum_{D^k} \LRp{\LRp{\pd{u}{\bm{x}_i},v}_{\LK} - \frac{1}{2}\LRa{\jump{u},v\bm{n}_i}_{\LdK}}, \qquad \forall v\in V_h.
 \]
-However, for $u \not\in V_h$, these two definitions are not equivalent.  This motivates the definition of a \textit{discrete} DG differentiation operator:
+The main property of the discrete derivatives utilized in this work is a discrete integration-by-parts formula.  
+\begin{lemma}
+Let $u,v\in V_h$.  Then, 
+\begin{align*}
+\LRp{D^i u,v} &= \LRp{-u,D^i_h v} + \int_{\partial \Omega} uv \bm{n}_i\\
+\LRp{D_h^i u,v} &= \LRp{-u,D^i_h v} + \int_{\partial \Omega} uv \bm{n}_i.
+\end{align*}
+\label{lemma:ibp}
+\end{lemma}
+\begin{proof}
+Ez
+\end{proof}
+
+For $u \not\in V_h$, due to the fact that the quadrature rule (\ref{eq:quad}) may not be exact, and these two definitions are not equivalent and Lemma~\ref{lemma:ibp} does not hold.  This motivates the definition of a \textit{discrete} DG differentiation operator:
 \begin{definition}
 The discrete discontinuous Galerkin differentiation operator ${D}^i_h: L^2\LRp{\Omega} \rightarrow V_h$ is defined as $D^i_h = D^i \Pi_N$.
 \end{definition}
 
-The main property of 
+Using these discrete derivatives, we can define discrete gradient and divergence operators
+\begin{definition}
+Let $u \in V_h$ and $\bm{u}\in \LRp{V_h}^d$.  Then, discrete gradient and divergence operators are defined as follows:
+\begin{align*}
+\LRp{\Grad^{\rm DG} u}_i &= D^i u, \qquad \Grad^{\rm DG}\cdot \bm{u} = \sum_{i=1}^d D^i \bm{u}_i\\
+\LRp{\Grad^{\rm DG}_h u}_i &= D_h^i u, \qquad \Grad^{\rm DG}_h\cdot \bm{u} = \sum_{i=1}^d D_h^i \bm{u}_i.
+\end{align*}
+\end{definition}
 
+
+\subsection{Examples}
+
+\begin{itemize}
+\item Tensor product elements: inner product computed using GLL nodes, $\Pi_N$ reduces to nodal interpolation
+\item General elements: $\Pi_N$ is just quadrature-based projection.  For accuracy, degree $2N$ or higher?  
+\item General elements: $\Pi_N$ can be taken to be nodal interpolation.  
+\item Pyramids?  
+\end{itemize}
 
 \section{Notes}
 Begin with the gradient.  Multiplication by $\bm{v}$ and integration by parts gives
@@ -419,19 +457,8 @@ and as a result when $v = 1$
 \[
 \LRp{\Grad_h\cdot \bm{u},\bbm{1}_{D^k}} = \int_{\partial D^k}\avg{\bm{u}}\cdot\bm{n}
 \]
-\section{Variable advection}
 
-A split formulation for advection is 
-\[
-\LRp{\pd{u}{t},v} + \frac{1}{2}\LRp{\Grad_h\cdot \Pi_N \LRp{ \bm{\beta}u},v} + \frac{1}{2}\LRp{\bm{\beta}\cdot\Grad_h u,v} + \frac{1}{2}\LRp{\LRp{\Grad\cdot \bm{\beta}} u,v} = 0.
-\]
-Taking $v = u$ yields and using $\LRp{\Grad_h u, \bm{v}} = \LRp{-u, \Grad_h \cdot \bm{v}}$ yields the energy statement
-\[
-\frac{1}{2}\nor{u}^2 + \frac{1}{2}\LRp{\Grad_h\cdot \Pi_N \LRp{ \bm{\beta}u},u} - \frac{1}{2}\LRp{ u, \Grad_h\cdot \Pi_N\LRp{\bm{\beta}u}} = \frac{1}{2}\LRp{-\LRp{\Grad \cdot \bm{\beta}} u,u},
-\]
-implying that $\frac{1}{2}\nor{u}^2 = 0$ if $\Grad\cdot \bm{\beta} = 0$, or that the method is energy conserving.  The only difference in this formulation is the introduction of $\Pi_N$, which can be defined at a discrete level using any quadrature scheme for which a discrete projection is well-defined. 
-
-\section{Local conservation}
+\subsection{Local conservation}
 
 Writing this in non-conservative form raises the question of local conservation.  Integrating the original equation over $D^k$ and using Gauss' theorem gives
 \[
@@ -459,6 +486,18 @@ Penalization can be added by adding any positive-definite stabilization term (up
 
 It's probably better to formulate this using continuous DG derivatives, recover flux terms, then discretize that - the flux terms \textit{should} still cancel out after discretization, right?
 
+\section{Variable advection}
+
+A split formulation for advection is 
+\[
+\LRp{\pd{u}{t},v} + \frac{1}{2}\LRp{\Grad_h\cdot \Pi_N \LRp{ \bm{\beta}u},v} + \frac{1}{2}\LRp{\bm{\beta}\cdot\Grad_h u,v} + \frac{1}{2}\LRp{\LRp{\Grad\cdot \bm{\beta}} u,v} = 0.
+\]
+Taking $v = u$ yields and using $\LRp{\Grad_h u, \bm{v}} = \LRp{-u, \Grad_h \cdot \bm{v}}$ yields the energy statement
+\[
+\frac{1}{2}\nor{u}^2 + \frac{1}{2}\LRp{\Grad_h\cdot \Pi_N \LRp{ \bm{\beta}u},u} - \frac{1}{2}\LRp{ u, \Grad_h\cdot \Pi_N\LRp{\bm{\beta}u}} = \frac{1}{2}\LRp{-\LRp{\Grad \cdot \bm{\beta}} u,u},
+\]
+implying that $\frac{1}{2}\nor{u}^2 = 0$ if $\Grad\cdot \bm{\beta} = 0$, or that the method is energy conserving.  The only difference in this formulation is the introduction of $\Pi_N$, which can be defined at a discrete level using any quadrature scheme for which a discrete projection is well-defined. 
+
 
 \section{Discrete DG derivatives}
 
@@ -474,17 +513,15 @@ The discrete DG derivative-based method is not consistent in the sense that Gale
 \end{align*}
 The latter term is consistent; the former is not due to the presence of $\avg{\Pi_N\LRp{\bm{\beta} u}}\cdot \bm{n}$ in the flux term.  The consistency error should then be $O(h^{N+1/2})$ using a trace inequality for $L^2$ projections.  
 
-Can also write the inconsistent term as 
-\[
-\LRp{-{ \bm{\beta}u},\Grad_h v} %= -\LRp{\Grad_h v,\bm{\beta}u} = \sum_{D^k} \LRp{ v,\Grad\cdot \LRp{\bm{\beta}u}}_{D^k} - \LRa{\avg{v},\bm{\beta}\cdot \bm{n} u}
-\]
-but this results in the same inconsistent flux term due to the fact that $\Grad_h$ is only defined for test functions in the polynomial space.  
-
 Note: can also use interpolants in a stable manner if using $D_h$.  Unlike SEM, this still requires an extra matvec per RHS evaluation because of the lack of diagonality of the mass matrix.  Reduces number of steps by one (no interpolation to quadrature points) but does not reduce number of total matvecs.  
 
-For curvilinear coordinates, 
+\section{Curvilinear coordinates}
 
-
+For curvilinear meshes, $J$ and $\bm{G}$ are no longer constant over each element.  However, for isoparametric mappings (and special polynomial interpolations of general curvilinear mappings), metric identities hold \cite{kopriva2006metric} such that $\widehat{\Grad} \cdot \LRp{J\bm{G}} = 0$.  
+\[
+\LRp{\Grad u,\bm{v}}_{D^k} = \LRp{J\bm{G}\widehat{\Grad} u,\bm{v}}_{\widehat{D}} = \LRp{-u,\widehat{\Grad} \cdot \LRp{J\bm{G}\bm{v}}}  + \LRa{J\bm{G}\widehat{\bm{n}} u,\bm{v}} 
+\]
+Noting that $J\bm{G}\widehat{\bm{n}} = \bm{n} J^f$ \cite{hesthaven2007nodal}, we recover integration by parts over the physical element.
 
 \section{Extension to other hyperbolic problems}
 
@@ -498,44 +535,44 @@ Example: Entropy splitting of Buckley-Leverett?
 
 Example: Entropy splitting of Euler (note - cannot extend to Navier-Stokes in an entropy-stable fashion due to fact that heat flux matrix is not symmetrizable w.r.t.\ homogeneous flux function, though viscous terms are.  This impacts only boundary conditions.) 
 
-\section{Standard entropy stability estimates}
-
-Given a nonlinear conservation law
-\begin{align*}
-\pd{u}{t} + \pd{f(u)}{x} = 0
-\end{align*}
-DG formulation is usually
-\[
-\LRp{\pd{u}{t},v} + \LRp{D_h f,v} = 0.
-\]
-Taking $v = u$ gives
-\[
-\frac{1}{2}\nor{u}^2 + \int_{D^k}{u D_h f} = 0.
-\]
-Continuous entropy stability relies on the introduction of $F,G$ such that
-\[
-\pd{F}{u} = u\pd{f}{u}, \qquad \pd{G}{u} = f, \qquad F = uf - G.
-\]
-Then, relying on product and chain rules
-\[
-\int_{D^k}{u \pd{f}{x}} = \int_{D^k}{\pd{(uf)}{x} - f\pd{u}{x}} = \int_{D^k}{\pd{(uf)}{x} - \pd{G}{u}\pd{u}{x}} =  \int_{D^k}{\pd{\LRp{uf-G}}{x}} = \int_{D^k}{\pd{F}{x}} = \int_{\partial D^k} F.
-\]
-These boundary terms can be made to cancel with appropriately defined numerical fluxes, resulting in entropy conservative schemes.  The challenge in reproducing this in the discrete case is the lack of a product and chain rule for inexact quadratures.  Jameson deals with this by introducing an integrated flux
-\[
-G = \frac{1}{2}\int_{-1}^1 f \LRp{ \avg{u} + \theta \jump{u}} \diff \theta.
-\]
-for which finite volume schemes satisfy (in a rough sense)
-\[
-\jump{G} = \avg{G} \jump{u}.
-\]
-Fischer and Carpenter (also Gassner and co-workers) use a similar idea but combine a symmetric two-point flux approximation with properties of SBP matrices to get 
-\[
-2\LRp{W,DF} = \LRp{W,DF} - \LRp{DW,F} + \LRa{W,F} =  \sum_i \sum_j (W_i-W_j) (MD)_{ij} F(U_i,U_j) + \LRa{W,F}.
-\]
-
-\section{Entropy splitting}
-
-It's currently unclear how to extend the symmetric two-point flux approximation to quadrature-based DG methods.  
+%\section{Standard entropy stability estimates}
+%
+%Given a nonlinear conservation law
+%\begin{align*}
+%\pd{u}{t} + \pd{f(u)}{x} = 0
+%\end{align*}
+%DG formulation is usually
+%\[
+%\LRp{\pd{u}{t},v} + \LRp{D_h f,v} = 0.
+%\]
+%Taking $v = u$ gives
+%\[
+%\frac{1}{2}\nor{u}^2 + \int_{D^k}{u D_h f} = 0.
+%\]
+%Continuous entropy stability relies on the introduction of $F,G$ such that
+%\[
+%\pd{F}{u} = u\pd{f}{u}, \qquad \pd{G}{u} = f, \qquad F = uf - G.
+%\]
+%Then, relying on product and chain rules
+%\[
+%\int_{D^k}{u \pd{f}{x}} = \int_{D^k}{\pd{(uf)}{x} - f\pd{u}{x}} = \int_{D^k}{\pd{(uf)}{x} - \pd{G}{u}\pd{u}{x}} =  \int_{D^k}{\pd{\LRp{uf-G}}{x}} = \int_{D^k}{\pd{F}{x}} = \int_{\partial D^k} F.
+%\]
+%These boundary terms can be made to cancel with appropriately defined numerical fluxes, resulting in entropy conservative schemes.  The challenge in reproducing this in the discrete case is the lack of a product and chain rule for inexact quadratures.  Jameson deals with this by introducing an integrated flux
+%\[
+%G = \frac{1}{2}\int_{-1}^1 f \LRp{ \avg{u} + \theta \jump{u}} \diff \theta.
+%\]
+%for which finite volume schemes satisfy (in a rough sense)
+%\[
+%\jump{G} = \avg{G} \jump{u}.
+%\]
+%Fischer and Carpenter (also Gassner and co-workers) use a similar idea but combine a symmetric two-point flux approximation with properties of SBP matrices to get 
+%\[
+%2\LRp{W,DF} = \LRp{W,DF} - \LRp{DW,F} + \LRa{W,F} =  \sum_i \sum_j (W_i-W_j) (MD)_{ij} F(U_i,U_j) + \LRa{W,F}.
+%\]
+%
+%\section{Entropy splitting}
+%
+%It's currently unclear how to extend the symmetric two-point flux approximation to quadrature-based DG methods.  
 
 %Sandham and Yee use the entropy splitting 
 %\[
